refactor(CMakeLists): 使用子模块而不是 FetchContent
相比而言，构建速度更快，而且还没有引用项目导致的 Warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,27 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(jiebaMove LANGUAGES CXX)
-
+project(jiebamove LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
+
 add_library(jiebamove SHARED main.cpp)
+
 target_link_options(jiebamove PRIVATE -s)
 
-# 检查依赖
-include(FetchContent)
-fetchcontent_declare(
-  cppjieba
-  GIT_REPOSITORY https://github.com/yanyiwu/cppjieba
-  GIT_TAG v5.0.3
-)
-fetchcontent_makeavailable(cppjieba)
-
-set(
-  data_files
-  ${cppjieba_SOURCE_DIR}/dict/jieba.dict.utf8
-  ${cppjieba_SOURCE_DIR}/dict/hmm_model.utf8
-  ${cppjieba_SOURCE_DIR}/dict/user.dict.utf8
-  ${cppjieba_SOURCE_DIR}/dict/idf.utf8
-  ${cppjieba_SOURCE_DIR}/dict/stop_words.utf8
-)
-
-add_custom_command(
-  TARGET jiebamove
-  PRE_BUILD
-  COMMAND cmake -E make_directory ${CMAKE_BINARY_DIR}/data
-  COMMAND cmake -E copy ${data_files} ${CMAKE_BINARY_DIR}/data
-)
-
 find_package(Lua REQUIRED)
-target_include_directories(jiebamove PRIVATE ${LUA_INCLUDE_DIR} ${cppjieba_SOURCE_DIR}/deps ${cppjieba_SOURCE_DIR}/include ${PROJECT_BINARY_DIR}/include)
+target_include_directories(jiebamove PRIVATE ${LUA_INCLUDE_DIR} extern/cppjieba/deps extern/cppjieba/include)
 target_link_libraries(jiebamove PRIVATE ${LUA_LIBRARIES})
 
 install(
   TARGETS jiebamove
   LIBRARY DESTINATION .config/nvim/lua
 )
+
 install(
   FILES
-  ${data_files} DESTINATION .config/nvim/lua/data
+  extern/cppjieba/dict/jieba.dict.utf8
+  extern/cppjieba/dict/hmm_model.utf8
+  extern/cppjieba/dict/user.dict.utf8
+  extern/cppjieba/dict/idf.utf8
+  extern/cppjieba/dict/stop_words.utf8
+  DESTINATION .config/nvim/lua/data
 )
